--- a/Ex3/res/layout/item_task.xml
+++ b/Ex3/res/layout/item_task.xml
@@ -3,15 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
-    
+   
     <Button
-        android:id="@+id/task_image"
+        android:id="@+id/task_button"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:onClick="DoneButton"
-        android:focusable="true"
-        android:background="@drawable/taskicon1"
+        android:background="@drawable/done_button_custom"
         android:contentDescription="@string/img_description"/>
 	
 	<LinearLayout 
@@ -34,6 +32,6 @@
 	    	android:layout_height="wrap_content"
 		    android:textSize="12dp"/>
 	
-	</LinearLayout>
+	</LinearLayout>	
 
 </LinearLayout>
